# rust-cuda-test

./: Cargo.toml  build.rs  notes.txt
kernel/: Cargo.toml
kernel/src/: device.rs  lib.rs
src/: main.rs
src/kernel/: device.rs  mod.rs
