[package]
name = "host"
version = "0.1.0"
authors = ["Alex Kofke <akofke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rustacuda = "*"
num-complex = {version = "0.2.4", default-features = false }
palette = "0.5.0"
image = "0.23.0-preview.0"
anyhow = "1.0"
minifb = "0.15.1"

#[target.'cfg(target_os = "cuda")'.dependencies]
#ptx-support = {git = "https://github.com/denzp/rust-ptx-support", default-features = true}
#num-complex = {version = "0.2.4", default-features = false }


[target.'cfg(not(target_os = "cuda"))'.build-dependencies]
ptx-builder = { git = "https://github.com/akofke/rust-ptx-builder" }

#[profile.release]
#codegen-units = 1
#lto = "fat"
