[package]
name = "kernel"
version = "0.1.0"
authors = ["Alex Kofke <akofke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptx-support = {git = "https://github.com/denzp/rust-ptx-support", default-features = true}
num-complex = {version = "0.2.4", default-features = false }